--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Главная</title>
     </head>
     <body>
-        <header><h1>Мой первый сайт</h1></header>
+        <header><h1>Техника Apple</h1></header>
         <section></section>
         <footer>2020</footer>
     </body>
