--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
+        <img alt="https://avatars.mds.yandex.net/get-dialogs/1676983/5c29e8f172037573c762/orig"/>
         <section></section>
         <footer>2020</footer>
-    </body>
+        <div>
+          div id"menu-top"
+          <div class="bg-1">
+            <ul>
+            <li><a href="#">Главная</a></li>
+            <li><a href="#">Iphone</a></li>
+            <li><a href="#">Mac Book</a></li>
+            <li><a href="#">iMac</a></li>
+            <li><a href="#">Другое</a></li>
+            <li><a href="#">О Apple</a></li>
+            </ul>
+         </div>
+          <div class="bg-2"></div>
+     </body>
 </html>
