--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <html>
     <head>
         <title>Главная</title>
+        <style>
+      #navbar ul{
+        display: none;
+        background-color: #f90;
+        position: absolute;
+        top: 100%;
+      }
+      #navbar li:hover ul { display: block; }
+      #navbar, #navbar ul{
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+      }
+      #navbar {
+        height: 30px;
+        background-color: #666;
+        padding-left: 25px;
+        min-width: 470px;
+      }
+      #navbar li {
+        float: left;
+        position: relative;
+        height: 100%;
+      }
+      #navbar li a {
+        display: block;
+        padding: 6px;
+        width: 100px;
+        color: #fff;
+        text-decoration: none;
+        text-align: center;
+      }
+      #navbar ul li { float: none; }
+      #navbar li:hover { background-color: #f90; }
+      #navbar ul li:hover { background-color: #666; }
+    </style>
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
         <img alt="https://avatars.mds.yandex.net/get-dialogs/1676983/5c29e8f172037573c762/orig"/>
-        <section></section>
-        <footer>2020</footer>
-        <div>
+         <div>
           div id"menu-top"
           <div class="bg-1">
-            <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Iphone</a></li>
-            <li><a href="#">Mac Book</a></li>
-            <li><a href="#">iMac</a></li>
-            <li><a href="#">Другое</a></li>
-            <li><a href="#">О Apple</a></li>
+            <ul id="navbar">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Iphone</a></li>
+                <li><a href="#">Mac Book</a></li>
+                <li><a href="#">iMac</a></li>
+                <li><a href="#">Другое</a></li>
+                <li><a href="#">О Apple</a></li>
             </ul>
          </div>
           <div class="bg-2"></div>
+        <section></section>
+        <footer>2020</footer>
      </body>
 </html>
