--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <style>
       #navbar ul{
         display: none;
-        background-color: #f90;
+        background-color: crimson;
         position: absolute;
         top: 100%;
       }
@@ -16,7 +16,7 @@
       }
       #navbar {
         height: 30px;
-        background-color: #666;
+        background-color: black;
         padding-left: 25px;
         min-width: 470px;
       }
@@ -46,11 +46,12 @@
           <div class="bg-1">
             <ul id="navbar">
                 <li><a href="#">Главная</a></li>
-                <li><a href="#">Iphone</a></li>
-                <li><a href="#">Mac Book</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">MacBook</a></li>
                 <li><a href="#">iMac</a></li>
-                <li><a href="#">Другое</a></li>
-                <li><a href="#">О Apple</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">Об Apple</a></li>
             </ul>
          </div>
           <div class="bg-2"></div>
