--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         display: block;
         padding: 6px;
         width: 100px;
-        color: #fff;
+        color: crimson;
         text-decoration: none;
         text-align: center;
       }
