--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         min-width: 470px;
       }
       #navbar li {
-        float: left;
+        float: none;
         position: relative;
         height: 100%;
       }
@@ -29,12 +29,12 @@
         display: block;
         padding: 6px;
         width: 100px;
-        color: crimson;
+        color: azure;
         text-decoration: none;
         text-align: center;
       }
       #navbar ul li { float: none; }
-      #navbar li:hover { background-color: #f90; }
+      #navbar li:hover { background-color: crimson; }
       #navbar ul li:hover { background-color: #666; }
     </style>
     </head>
