--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         min-width: 470px;
       }
       #navbar li {
-        float: none;
+        float: left;
         position: relative;
         height: 100%;
       }
