--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
-        <img alt="https://avatars.mds.yandex.net/get-dialogs/1676983/5c29e8f172037573c762/orig"/>
+        <img scr="/images/orig"/>
          <div>
           div id"menu-top"
           <div class="bg-1">
