--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
-        <img scr="/images/orig"/>
-         <div>
-          div id"menu-top"
+        <img scr="/images/orig.png" />
+         <div
           <div class="bg-1">
             <ul id="navbar">
                 <li><a href="#">Главная</a></li>
