--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
-        <img scr="/images/orig.png" />
+        <img scr="/images/orig.png">
          <div
           <div class="bg-1">
             <ul id="navbar">
@@ -55,6 +55,6 @@
          </div>
           <div class="bg-2"></div>
         <section></section>
-        <footer>2020</footer>
+        <footer></footer>
      </body>
 </html>
