--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
-        <img scr="/images/orig.png">
+        <img alt="/images/orig.png">
          <div
           <div class="bg-1">
             <ul id="navbar">
-                <li><a href="#">Главная</a></li>
+                <li><a href="#">Главная</a></li
                 <li><a href="#">iPhone</a></li>
                 <li><a href="#">MacBook</a></li>
                 <li><a href="#">iMac</a></li>
