--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       #navbar li:hover { background-color: crimson; }
       #navbar ul li:hover { background-color: #666; }
     </style>
+        <img src="images/kartinka.jpg">
     </head>
     <body>
         <header><h1>Техника Apple</h1></header>
-        <img alt="/images/orig.png">
          <div
           <div class="bg-1">
             <ul id="navbar">
