--- a/index.html
+++ b/index.html
@@ -1,60 +1,12 @@
-<html>
+<html lang="ru">
     <head>
-        <title>Главная</title>
-        <style>
-      #navbar ul{
-        display: none;
-        background-color: crimson;
-        position: absolute;
-        top: 100%;
-      }
-      #navbar li:hover ul { display: block; }
-      #navbar, #navbar ul{
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-      }
-      #navbar {
-        height: 30px;
-        background-color: black;
-        padding-left: 25px;
-        min-width: 470px;
-      }
-      #navbar li {
-        float: left;
-        position: relative;
-        height: 100%;
-      }
-      #navbar li a {
-        display: block;
-        padding: 6px;
-        width: 100px;
-        color: azure;
-        text-decoration: none;
-        text-align: center;
-      }
-      #navbar ul li { float: none; }
-      #navbar li:hover { background-color: crimson; }
-      #navbar ul li:hover { background-color: #666; }
-    </style>
-        <img src="images/kartinka.jpg">
+        <title>Мой первый проект</title>
+        <meta charset="utf-8">
+        <meta name="description"content="Сайт про космические приключение">
+        <meta name="viewport"content=width=device-width>
+        <meta name="keyboard"content="косомс, астронавт, МКС, международная космическая станция">
     </head>
     <body>
-        <header><h1>Техника Apple</h1></header>
-         <div
-          <div class="bg-1">
-            <ul id="navbar">
-                <li><a href="#">Главная</a></li
-                <li><a href="#">iPhone</a></li>
-                <li><a href="#">MacBook</a></li>
-                <li><a href="#">iMac</a></li>
-                <li><a href="#">iPad</a></li>
-                <li><a href="#">AirPods</a></li>
-                <li><a href="#">Об Apple</a></li>
-            </ul>
-         </div>
-          <div class="bg-2"></div>
-        <section></section>
-        <footer></footer>
-     </body>
+        <h1>Космонавт Коля к полету готов!</h1>
+    </body>
 </html>
