--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="description"content="Сайт про космические приключение">
         <meta name="viewport"content=width=device-width>
-        <meta name="keyboard"content="косомс, астронавт, МКС, международная космическая станция">
+        <meta name="keywoard"content="Космос, астронавт, МКС, международная космическая станция">
     </head>
     <body>
         <h1>Космонавт Коля к полету готов!</h1>
