--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="description"content="Сайт про космические приключение">
         <meta name="viewport"content=width=device-width>
         <meta name="keywoard"content="Космос, астронавт, МКС, международная космическая станция">
+        <link rel="stylesheet" href="/afanasyev_official/style/main.css">
     </head>
     <body>
         <h1>Космонавт Коля к полету готов!</h1>
