Обновлен index и css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <title>Мой первый проект</title>
         <meta charset="utf-8">
         <meta name="description"content="Сайт про космические приключение">
-        <meta name="viewport"content=width=device-width>
+        <meta name="viewport"content=width=device-width, initial-scale=1>
         <meta name="keywoard"content="Космос, астронавт, МКС, международная космическая станция">
         <link rel="stylesheet" href="/afanasyev_official/style/main.css">
     </head>
     <body>
-        <h1>Космонавт Коля к полету готов!</h1>
+        <div class="container">
+            <header class="site-header">
+                <img scr="/images/logo.png" alt="logo" title="Логотип">
+            </header>
+            <section></section>
+            <section></section>
+            <footer class="site-footer">
+                <nav class="row">
+                    <div class="column"></div>
+                        <ul>
+                            <li>
+                                <a></a>
+                            </li>
+                            <li>
+                                <a></a>
+                            </li>
+                        </ul>
+                    <div class="column"></div>
+                        <ul>
+                            <li>
+                                <a></a>
+                            </li>
+                            <li>
+                                <a></a>
+                            </li>
+                        </ul>
+                </nav>
+            </footer>
+        </div>
     </body>
 </html>
