--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             <section></section>
             <footer class="site-footer">
                 <nav class="row">
-                    <div class="column"></div>
-                        <ul>
+                    <div>
+                        <ul class="column">
                             <li>
-                                <a></a>
+                                <a>1</a>
                             </li>
                             <li>
-                                <a></a>
+                                <a>2</a>
                             </li>
                         </ul>
-                    <div class="column"></div>
-                        <ul>
+                    </div>
+                        <ul class="column">
                             <li>
                                 <a></a>
                             </li>
