--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
                 <nav class="row">
                     <div>
                         <ul class="column">
-                            <li>
-                                <a>1</a>
-                            </li>
-                            <li>
-                                <a>2</a>
-                            </li>
+                            <li><a>Пункт 1</a></li>
+                            <li><a>Пункт 2</a></li>
                         </ul>
                     </div>
                         <ul class="column">
