Обновление сайта, по типу "Эталонный сайт"

--- a/index.html
+++ b/index.html
@@ -3,36 +3,42 @@
     <head>
         <title>Мой первый проект</title>
         <meta charset="utf-8">
-        <meta name="description"content="Сайт про космические приключение">
-        <meta name="viewport"content=width=device-width, initial-scale=1>
-        <meta name="keywoard"content="Космос, астронавт, МКС, международная космическая станция">
-        <link rel="stylesheet" href="/afanasyev_official/style/main.css">
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/site/style/main.css">
+        <link rel="stylesheet" href="/site/style/outline.css">
     </head>
     <body>
-        <div class="container">
-            <header class="site-header">
-                <img scr="/images/logo.png" alt="logo" title="Логотип">
-            </header>
-            <section></section>
-            <section></section>
-            <footer class="site-footer">
-                <nav class="row">
-                    <div>
-                        <ul class="column">
-                            <li><a>Пункт 1</a></li>
-                            <li><a>Пункт 2</a></li>
-                        </ul>
-                    </div>
-                        <ul class="column">
-                            <li>
-                                <a></a>
-                            </li>
-                            <li>
-                                <a></a>
-                            </li>
-                        </ul>
+        <header>
+            <div class="container">
+                <nav>
+                    <ul class="row">
+                        <li>Пункт 1</li>
+                        <li>Пункт 2</li>
+                    </ul>
                 </nav>
-            </footer>
-        </div>
+            </div>
+        </header>
+        <main>
+            <div class="container">
+                <section class="col-2"></section>
+                <aside class="col-1"></aside>
+            </div>
+        </main>
+        <footer>
+            <div class="container">
+                <nav class="row">
+                    <ul class="column">
+                        <li>Пункт 1</li>
+                        <li>Пункт 2</li>
+                    </ul>
+                    <ul class="column">
+                        <li>Пункт 1</li>
+                        <li>Пункт 2</li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
     </body>
 </html>
