--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/site/style/main.css">
-        <link rel="stylesheet" href="/site/style/outline.css">
+        <link rel="stylesheet" href="/afanasyev_official/style/main.css">
+        <link rel="stylesheet" href="/afanasyev_official/style/outline.css">
     </head>
     <body>
         <header>
