--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </header>
         <main>
             <div class="container">
+                <aside class="col-1"></aside>
                 <section class="col-2"></section>
                 <aside class="col-1"></aside>
             </div>
