--- a/index.html
+++ b/index.html
@@ -11,18 +11,47 @@
     <body>
         <header>
             <div class="container">
-                <nav>
-                    <ul class="row">
-                        <li>Пункт 1</li>
-                        <li>Пункт 2</li>
-                    </ul>
-                </nav>
+                <div class="col-1">
+                    <a href="#"><img scr="/afanasyev_official/images/nike.jpg"></a>
+                </div>
+                <div class="col-3">
+                    <nav>
+                        <ul class="row">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1">
+                    <a href="#">Кнопка</a>
+                </div>
             </div>
         </header>
         <main>
             <div class="container">
                 <aside class="col-1"></aside>
+                    <nav>
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">Пункт 3</a></li>
+                            <li><a href="#">Пункт 4</a></li>
+                            <li><a href="#">Пункт 5</a></li>
+                        </ul>
+                    </nav>
                 <section class="col-3"></section>
+                    <section>Заголовок 1</section>
+                    <section>Заголовок 2</section>
+                    <section>Заголовок 3</section>
+                    <section>Заголовок 4</section>
+                    <section>Заголовок 5</section>
+                    <section>Заголовок 6</section>
+                    <nav>
+                        <ul class="row">
+                            <li><a href="#"></a></li>
+                            <li><a href="#"></a></li>
+                        </ul>
+                    </nav>
                 <aside class="col-1"></aside>
             </div>
         </main>
@@ -30,12 +59,12 @@
             <div class="container">
                 <nav class="row">
                     <ul class="column">
-                        <li>Пункт 1</li>
-                        <li>Пункт 2</li>
+                        <li><a href="#">Пункт 1</a></li>
+                        <li><a href="#">Пункт 2</a></li>
                     </ul>
                     <ul class="column">
-                        <li>Пункт 1</li>
-                        <li>Пункт 2</li>
+                        <li><a href="#">Пункт 1</a></li>
+                        <li><a href="#">Пункт 2</a></li>
                     </ul>
                 </nav>
             </div>
