--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                         </ul>
                     </nav>
                 <section class="col-3"></section>
-                    <section>Заголовок 1</section>
-                    <section>Заголовок 2</section>
-                    <section>Заголовок 3</section>
-                    <section>Заголовок 4</section>
-                    <section>Заголовок 5</section>
-                    <section>Заголовок 6</section>
+                    <section><h1>Заголовок 1</h1></section>
+                    <section><h2>Заголовок 2</h2></section>
+                    <section><h3>Заголовок 3</h3></section>
+                    <section><h4>Заголовок 4</h4></section>
+                    <section><h5>Заголовок 5</h5></section>
+                    <section><h6>Заголовок 6</h6></section>
                     <nav>
                         <ul class="row">
                             <li><a href="#"></a></li>
