--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                         </ul>
                     </nav>
                 <section class="col-3"></section>
-                    <section><h1>Заголовок 1</h1></section>
-                    <section><h2>Заголовок 2</h2></section>
-                    <section><h3>Заголовок 3</h3></section>
-                    <section><h4>Заголовок 4</h4></section>
-                    <section><h5>Заголовок 5</h5></section>
-                    <section><h6>Заголовок 6</h6></section>
+                    <h1>Заголовок 1</h1>
+                    <h2>Заголовок 2</h2>
+                    <h3>Заголовок 3</h3>
+                    <h4>Заголовок 4</h4>
+                    <h5>Заголовок 5</h5>
+                    <h6>Заголовок 6</h6>
                     <nav>
                         <ul class="row">
                             <li><a href="#"></a></li>
