--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <a href="#"><img scr="/afanasyev_official/images/nike.jpg"></a>
+                    <a href="#"><img scr="afanasyev_official/images/nike.jpg"></a>
                 </div>
                 <div class="col-3">
                     <nav>
@@ -39,13 +39,14 @@
                             <li><a href="#">Пункт 5</a></li>
                         </ul>
                     </nav>
-                <section class="col-3"></section>
+                <section class="col-3">
                     <h1>Заголовок 1</h1>
                     <h2>Заголовок 2</h2>
                     <h3>Заголовок 3</h3>
                     <h4>Заголовок 4</h4>
                     <h5>Заголовок 5</h5>
                     <h6>Заголовок 6</h6>
+                </section>
                     <nav>
                         <ul class="row">
                             <li><a href="#"></a></li>
@@ -56,7 +57,10 @@
             </div>
         </main>
         <footer>
-            <div class="container">
+            <div class="col-1">
+                <a href="#"><img scr="afanasyev_official/images/nike.jpg"></a>
+            </div>
+            <div class="col-3">
                 <nav class="row">
                     <ul class="column">
                         <li><a href="#">Пункт 1</a></li>
@@ -67,6 +71,8 @@
                         <li><a href="#">Пункт 2</a></li>
                     </ul>
                 </nav>
+            </div>
+            <div class="col-1">
             </div>
         </footer>
     </body>
