--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </header>
         <main>
             <div class="container">
-                <aside class="col-1"></aside>
+                <aside class="col-1">
                     <nav>
                         <ul class="column">
                             <li><a href="#">Пункт 1</a></li>
@@ -39,6 +39,7 @@
                             <li><a href="#">Пункт 5</a></li>
                         </ul>
                     </nav>
+                </aside>
                 <section class="col-3">
                     <h1>Заголовок 1</h1>
                     <h2>Заголовок 2</h2>
