--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img src="/images/nike.jpg">
+                    <img src="/afanasyev_official/images/nike.jpg">
                 </div>
                 <div class="col-3">
                     <nav>
@@ -53,7 +53,7 @@
         </main>
         <footer>
             <div class="col-1">
-                <img src="/images/nike.jpg">
+                <img src="/afanasyev_official/images/nike.jpg">
             </div>
             <div class="col-3">
                 <nav class="row">
