--- a/index.html
+++ b/index.html
@@ -52,22 +52,24 @@
             </div>
         </main>
         <footer>
-            <div class="col-1">
+            <div class="container">
+                <div class="col-1">
                 <img src="/afanasyev_official/images/nike.jpg">
-            </div>
-            <div class="col-3">
-                <nav class="row">
-                    <ul class="column">
-                        <li><a href="#">Пункт 1</a></li>
-                        <li><a href="#">Пункт 2</a></li>
-                    </ul>
-                    <ul class="column">
-                        <li><a href="#">Пункт 1</a></li>
-                        <li><a href="#">Пункт 2</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="col-1">
+                </div>
+                <div class="col-3">
+                    <nav class="row">
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                        <ul class="column">
+                            <li><a href="#">Пункт 1</a></li>
+                            <li><a href="#">Пункт 2</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="col-1">
+                </div>
             </div>
         </footer>
     </body>
