--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <title>Мой первый проект</title>
+        <title>Agnecy</title>
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="keywords" content="">
@@ -12,7 +12,6 @@
         <header>
             <div class="container">
                 <div class="col-1">
-                    <img src="/afanasyev_official/images/g.jpg">
                 </div>
                 <div class="col-3">
                     <nav>
@@ -23,7 +22,6 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#" class="button">Кнопка</a>
                 </div>
             </div>
         </header>
