--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <header>
             <div class="container">
                 <div class="col-1">
+                    <style>
+                        #col-1 {
+                            background-color: #F7F4F4;
+                        }
+                    </style>
                 </div>
                 <div class="col-3">
                     <nav>
