--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                 <div class="col-4">
                     <nav>
                         <ul class="row">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">PORTFOLIO</a></li>
+                            <li><a href="#">ABOUT US</a></li>
+                            <li><a href="#">CONTACT</a></li>
                         </ul>
                     </nav>
                 </div>
