--- a/index.html
+++ b/index.html
@@ -29,24 +29,10 @@
         </header>
         <main>
             <div class="container">
-                <aside class="col-1">
-                    <nav>
-                        <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
-                            <li><a href="#">Пункт 3</a></li>
-                            <li><a href="#">Пункт 4</a></li>
-                            <li><a href="#">Пункт 5</a></li>
-                        </ul>
-                    </nav>
+                <aside class="col-2">
                 </aside>
-                <section class="col-3">
-                    <h1>Заголовок 1</h1>
-                    <h2>Заголовок 2</h2>
-                    <h3>Заголовок 3</h3>
-                    <h4>Заголовок 4</h4>
-                    <h5>Заголовок 5</h5>
-                    <h6>Заголовок 6</h6>
+                <section class="col-2">
+                    <img scr="/afanasyev_official/images/block-video.png">
                 </section>
                 <aside class="col-1"></aside>
             </div>
@@ -55,19 +41,16 @@
             <div class="container">
                 <div class="col-1">
                 </div>
-                <div class="col-3">
+                <div class="col-5">
                     <nav class="row">
-                        <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
-                        </ul>
-                        <ul class="column">
-                            <li><a href="#">Пункт 1</a></li>
-                            <li><a href="#">Пункт 2</a></li>
-                        </ul>
+                        <h5>© Copyright @Junaed 2016, All rights reserved.</h5>
                     </nav>
                 </div>
                 <div class="col-1">
+                    <img scr="/afanasyev_official/images/icon-twitter.png">
+                    <img scr="/afanasyev_official/images/icon-linkedln.png">
+                    <img scr="/afanasyev_official/images/icon-google-plus.png">
+                    <img scr="/afanasyev_official/images/icon-facebook.png">
                 </div>
             </div>
         </footer>
