--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </nav>
                 </div>
                 <div class="col-2">
-                    <img scr="/afanasyev_official/images/icon-twitter.png">
+                    <a href="#"><img scr="/afanasyev_official/images/icon-twitter.png"></a>
                     <img scr="/afanasyev_official/images/icon-linkedIn.png">
                     <img scr="/afanasyev_official/images/icon-google-plus.png">
                     <img scr="/afanasyev_official/images/icon-facebook.png">
