--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </nav>
                 </div>
                 <div class="col-2">
-                    <a href="#"><img scr="/afanasyev_official/images/icon-twitter.png"></a>
-                    <img scr="/afanasyev_official/images/icon-linkedIn.png">
-                    <img scr="/afanasyev_official/images/icon-google-plus.png">
-                    <img scr="/afanasyev_official/images/icon-facebook.png">
+                    <a href="#"><img scr="/images/icon-twitter.png"></a>
+                    <a href="#"><img scr="/images/icon-linkedIn.png"></a>
+                    <a href="#"><img scr="/images/icon-google-plus.png"></a>
+                    <a href="#"><img src="/images/icon-facebook.png"></a>
                 </div>
             </div>
         </footer>
