--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         </main>
         <footer>
             <div class="container">
-                <div class="col-3">
+                <div class="col-5">
                     <nav class="row">
                         <h5>© Copyright @Junaed 2016, All rights reserved.</h5>
                     </nav>
                 </div>
-                <div class="col-2">
+                <div class="col-1">
                     <a href="#"><img scr="/images/icon-twitter.png"></a>
                     <a href="#"><img scr="/images/icon-linkedIn.png"></a>
                     <a href="#"><img scr="/images/icon-google-plus.png"></a>
-                    <a href="#"><img src="/images/icon-facebook.png"></a>
+                    <a href="#"><img src="/afanasyev_official/images/icon-facebook.png"></a>
                 </div>
             </div>
         </footer>
