--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <aside class="col-2">
                 </aside>
                 <section class="col-2">
-                    <img scr="/afanasyev_official/images/block-video.png">
+                    <img scr="/images/block-video.png">
                 </section>
                 <aside class="col-1"></aside>
             </div>
