--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#"><img scr="/images/icon-twitter.png"></a>
+                    <!--<a href="#"><img scr="/images/icon-twitter.png"></a>
                     <a href="#"><img scr="/images/icon-linkedIn.png"></a>
-                    <a href="#"><img scr="/images/icon-google-plus.png"></a>
+                    <a href="#"><img scr="/images/icon-google-plus.png"></a>-->
                     <a href="#"><img src="/afanasyev_official/images/icon-facebook.png"></a>
                 </div>
             </div>
