--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <aside class="col-2">
                 </aside>
                 <section class="col-2">
-                    <img scr="/images/block-video.png">
+                    <img scr="/afanasyev_official/images/block-video.png">
                 </section>
                 <aside class="col-1"></aside>
             </div>
@@ -45,9 +45,9 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <!--<a href="#"><img scr="/images/icon-twitter.png"></a>
-                    <a href="#"><img scr="/images/icon-linkedIn.png"></a>
-                    <a href="#"><img scr="/images/icon-google-plus.png"></a>-->
+                    <a href="#"><img scr="/afanasyev_official/images/icon-twitter.png"></a>
+                    <a href="#"><img scr="/afanasyev_official/images/icon-linkedIn.png"></a>
+                    <a href="#"><img scr="/afanasyev_official/images/icon-google-plus.png"></a>
                     <a href="#"><img src="/afanasyev_official/images/icon-facebook.png"></a>
                 </div>
             </div>
