--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     </nav>
                 </div>
                 <div class="col-1">
-                    <a href="#"><img srс="https://github.com/afanasyevofficial/afanasyev_official/blob/master/images/icon-twitter.png?raw=true"></a>
-                    <a href="#"><img srс="https://raw.githubusercontent.com/afanasyevofficial/afanasyev_official/master/images/icon-google-plus.png"></a>
-                    <a href="#"><img srс="https://raw.githubusercontent.com/afanasyevofficial/afanasyev_official/master/images/icon-google-plus.png"></a>
+                    <a href="#"><img src="/afanasyev_official/images/icon-twitter.png"></a>
+                    <a href="#"><img srс="/afanasyev_official/images/linkedln.png"></a>
+                    <a href="#"><img srс="/images/icon-google-plus.png"></a>
                     <a href="#"><img src="/afanasyev_official/images/icon-facebook.png"></a>
                 </div>
             </div>
