--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <main>
             <div class="container">
                 <aside class="col-2">
+                    <h1><b></b></h1>
                 </aside>
                 <section class="col-2">
                     <img src="/afanasyev_official/images/block-video.png">
@@ -46,8 +47,8 @@
                 </div>
                 <div class="col-1">
                     <a href="#"><img src="/afanasyev_official/images/icon-twitter.png"></a>
-                    <a href="#"><img srс="/afanasyev_official/images/icon-linkedln.png"></a>
-                    <a href="#"><img srс="/afanasyev_official/images/icon-google-plus.png"></a>
+                    <a href="#"><img src="/afanasyev_official/images/icon-linkedIn.png"></a>
+                    <a href="#"><img src="/afanasyev_official/images/icon-google-plus.png"></a>
                     <a href="#"><img src="/afanasyev_official/images/icon-facebook.png"></a>
                 </div>
             </div>
