--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <main>
             <div class="container">
                 <aside class="col-2">
-                    <h1><b></b></h1>
+                    <h1><b>OUR STRONG ORGANAISATION</b></h1>
+                    <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
                 </aside>
                 <section class="col-2">
                     <img src="/afanasyev_official/images/block-video.png">
