--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </header>
         <main>
             <div class="container">
+                <aside class="col-1"></aside>
                 <aside class="col-2">
                     <h1><b>OUR STRONG ORGANAISATION</b></h1>
                     <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt</h6>
