--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             </div>
             <div class="container2">
                 <aside class="col-1-1"></aside>
-                <aside class="col-2-1"></aside>
+                <aside class="col-2-1">
+                    <h1>DO YUo</h1>
+                </aside>
                 <aside class="col-1-1"></aside>
                 <aside class="col-1-1"></aside>
                 <aside class="col-1-1"></aside>
